@@ -72,8 +72,7 @@
   <!-- Folder contents -->
   <div class="faceted-form" metal:define-macro="widgets" id="faceted-form"
     tal:define="mode view/mode | string:view" tal:attributes="data-mode mode"
-    i18n:domain="eea"
-    style="padding-bottom: 2em;">
+    i18n:domain="eea">
 
     <!-- Basic/Extended search -->
     <div class="faceted-sections-buttons">
