@@ -145,6 +145,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added new richText field 'Meeting.notes/MeetingItem.notes' to be able to specifically encode notes to be used
   in document generation (for example) on an item or on a meeting.  These fields are by default only
   editable/viewable by MeetingManagers
+- Added new richText field 'MeetingItem.internalNotes' restricted in edit/view to the members of the proposing
+  group to leave internal notes on an item
 - Every caches are invalidated when a MeetingConfig is edited so changing a parameter
   will invalidate caches for actions_panel, faceted filters vocabularies, ...
 - Refactored the way localRoles are updated on item and meeting, do no more manage various cases,
